<resources>
    <string name="app_name">Cat.copernic.final.Alejandro.Jimenez</string>
    <string name="action_settings">About</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Primera pagina</string>
    <string name="previous">Up button</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="button2">Segunda Pagina</string>
    <string name="botonret">Up Button</string>
    <string name="pagina_principal">Pagina Principal</string>
    <string name="gatomadefake">TODO</string>
    <string name="boton">cuadrado</string>
    <string name="salir">salir</string>
    <string name="goku">goku</string>
    <string name="kame">kame</string>
</resources>